army-01 added compiler support to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@ project(army)
 
 set(CMAKE_CXX_STANDARD 11)
 
+set(CMAKE_CXX_COMPILER g++-4.9)
+
 set(SOURCE_FILES main.cpp)
 add_executable(army ${SOURCE_FILES})
