army-02 Addede Catch library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,16 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(CMAKE_CXX_COMPILER g++-4.9)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES
+    main.cpp
+
+    src/units/warriors/Soldier.cpp
+
+    src/abilities/UnitState.cpp
+    src/abilities/UnitAttack.cpp
+   )
+
+include_directories(${PROJECT_SOURCE_DIR}/src)
+include_directories(${PROJECT_SOURCE_DIR}/extlibs)
+
 add_executable(army ${SOURCE_FILES})
