army-01 Added Rogue and RogueAttack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,13 @@ set(CMAKE_CXX_COMPILER g++-4.9)
 
 set(SOURCE_FILES
     src/units/warriors/Warrior.cpp
+    src/units/warriors/Soldier.cpp
+    src/units/warriors/Rogue.cpp
 
     src/abilities/UnitState.cpp
+
     src/abilities/UnitAttack.cpp
+    src/abilities/RogueAttack.cpp
    )
 
 include_directories(${PROJECT_SOURCE_DIR}/src)
